# polyglot-embedding-demo

./: .gitignore  README.md  build.gradle.kts  pom.xml
.github/workflows/: main.yml
native-embedding/: README.md  pom.xml
native-embedding/native-embedding-test/: CMakeLists.txt
native-embedding/native-embedding-test/src/: native-embedding-test.c  native-embedding-test2.c  org_example_native_embedding_ExecutionEventConsumer.c  org_example_native_embedding_ExecutionEventConsumer.h
native-embedding/src/main/c/: org_example_native_embedding_CallbackTrampoline.c
native-embedding/src/main/java/org/example/native_embedding/: API.java  API2.java  APIHeader.java  CallbackTrampoline.java  ExecutionEventConsumer.java
native-embedding/src/test/c/: CMakeLists.txt  evaljs.c  fib.c  hello-with-callback.c  nativejavavm.c
src/main/java/: module-info.java
src/main/java/org/example/embedding/: Main.java
src/test/java/org/example/embedding/test/: EmbeddingTest.java
