cmake_minimum_required(VERSION 3.22)
project(native-embedding-test)
set(CMAKE_C_STANDARD 11)
set(CMAKE_CONFIGURATION_TYPES Release)
set(CMAKE_BUILD_TYPE Release)
if(NOT WIN32)
    set(C_FLAGS "-fPIC -g")
endif()
STRING(REGEX REPLACE "\\\\" "/" PROJECT_MAIN_DIR_FIXED $ENV{PROJECT_MAIN_DIR})
STRING(REGEX REPLACE "\\\\" "/" PROJECT_BUILD_DIR_FIXED $ENV{PROJECT_BUILD_DIR})
set(SRC_DIR ${PROJECT_MAIN_DIR_FIXED}/native-embedding-test/src)
set(NEALIB_PATH ${PROJECT_BUILD_DIR_FIXED})
set(INCLUDE_DIR1 ${PROJECT_BUILD_DIR_FIXED})
set(CMAKE_C_FLAGS ${C_FLAGS})
set(NEALIB $ENV{LIB_NATIVE_EMBEDDING_NAME})
add_executable(native-embedding-test ${SRC_DIR}/native-embedding-test.c)
target_include_directories(native-embedding-test PRIVATE ${INCLUDE_DIR1})
target_link_directories(native-embedding-test PRIVATE ${NEALIB_PATH})
target_link_libraries(native-embedding-test ${NEALIB})
