cmake_minimum_required(VERSION 3.22)
project(native-embedding-test)
set(CMAKE_C_STANDARD 11)
set(CMAKE_CONFIGURATION_TYPES Release)
set(CMAKE_BUILD_TYPE Release)
if(NOT WIN32)
    set(C_FLAGS "-fPIC -g")
endif()
STRING(REGEX REPLACE "\\\\" "/" PROJECT_MAIN_DIR_FIXED $ENV{PROJECT_MAIN_DIR})
STRING(REGEX REPLACE "\\\\" "/" JAVA_HOME_FIXED $ENV{JAVA_HOME})
STRING(REGEX REPLACE "\\\\" "/" LIB_API_PATH_FIXED $ENV{LIB_API_PATH})
set(HELPER_LIB_SRC_DIR ${PROJECT_MAIN_DIR_FIXED}/src/main/c)
set(TEST_SRC_DIR ${PROJECT_MAIN_DIR_FIXED}/src/test/c)
if(NOT WIN32)
    set(CMAKE_C_FLAGS ${C_FLAGS})
endif()
set(LIB_API_PATH ${LIB_API_PATH_FIXED})
set(JNI_INCLUDE_DIR ${JAVA_HOME_FIXED}/include)
set(JNI_PLATFORM_INCLUDE_DIR ${JAVA_HOME_FIXED}/include/$ENV{PLATFORM_NAME})
set(APILIB $ENV{LIB_API_NAME})
add_library(ExecutionEventConsumer SHARED ${HELPER_LIB_SRC_DIR}/org_example_native_embedding_ExecutionEventConsumer.c)
target_include_directories(ExecutionEventConsumer PRIVATE ${JNI_INCLUDE_DIR})
target_include_directories(ExecutionEventConsumer PRIVATE ${JNI_PLATFORM_INCLUDE_DIR})
target_include_directories(ExecutionEventConsumer PRIVATE ${HELPER_LIB_SRC_DIR})
add_executable(native-embedding-test2 ${TEST_SRC_DIR}/native-embedding-test2.c)
target_include_directories(native-embedding-test2 PRIVATE ${JNI_INCLUDE_DIR})
target_include_directories(native-embedding-test2 PRIVATE ${JNI_PLATFORM_INCLUDE_DIR})
target_include_directories(native-embedding-test2 PRIVATE ${TEST_SRC_DIR})
target_link_directories(native-embedding-test2 PRIVATE ${LIB_API_PATH})
target_link_libraries(native-embedding-test2 ${APILIB})
target_link_libraries(native-embedding-test2 ExecutionEventConsumer)

